[gd_scene load_steps=12 format=3 uid="uid://c8qoih0uicwko"]

[ext_resource type="Script" path="res://scripts/Ui/gui.gd" id="1_baj1k"]
[ext_resource type="Texture2D" uid="uid://2lefd88mh5vi" path="res://assets/Mine/heart_1.png" id="1_kmh0i"]
[ext_resource type="FontFile" uid="uid://dw1fwoil1ndbb" path="res://assets/fonts/Minimal5x7.ttf" id="1_lrjv7"]
[ext_resource type="Texture2D" uid="uid://bjwdvwwbb2d01" path="res://assets/Mine/heart_2.png" id="2_f2yqe"]
[ext_resource type="Texture2D" uid="uid://oxyr5mh73rfc" path="res://assets/Mine/heart_3.png" id="3_3aqk5"]
[ext_resource type="Texture2D" uid="uid://bntrm0ubnnt7d" path="res://assets/Mine/life_1.png" id="4_luv37"]
[ext_resource type="Texture2D" uid="uid://bxq66aybdlnmm" path="res://assets/Mine/life_2.png" id="5_7t4d5"]
[ext_resource type="Texture2D" uid="uid://cl23ml46in6wb" path="res://assets/Mine/life_3.png" id="6_mnio8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pv0ub"]
bg_color = Color(0.176471, 0.176471, 0.176471, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 12

[sub_resource type="AnimatedTexture" id="AnimatedTexture_u6ala"]
frames = 3
speed_scale = 2.0
frame_0/texture = ExtResource("1_kmh0i")
frame_1/texture = ExtResource("2_f2yqe")
frame_1/duration = 1.0
frame_2/texture = ExtResource("3_3aqk5")
frame_2/duration = 1.0

[sub_resource type="AnimatedTexture" id="AnimatedTexture_xevly"]
frames = 3
speed_scale = 2.0
frame_0/texture = ExtResource("4_luv37")
frame_1/texture = ExtResource("5_7t4d5")
frame_1/duration = 1.0
frame_2/texture = ExtResource("6_mnio8")
frame_2/duration = 1.0

[node name="GUI" type="CanvasLayer"]
visible = false
script = ExtResource("1_baj1k")

[node name="Health" type="Panel" parent="."]
offset_left = 15.0
offset_top = 15.0
offset_right = 222.0
offset_bottom = 55.0
theme_override_styles/panel = SubResource("StyleBoxFlat_pv0ub")

[node name="HealthLabel" type="Label" parent="Health"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 8.0
offset_top = -11.0
offset_right = 72.0
offset_bottom = 17.0
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_lrjv7")
theme_override_font_sizes/font_size = 32
text = "Health"
vertical_alignment = 1

[node name="Health1" type="TextureRect" parent="Health"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 79.0
offset_top = -8.0
offset_right = 95.0
offset_bottom = 8.0
grow_vertical = 2
texture = SubResource("AnimatedTexture_u6ala")
stretch_mode = 1

[node name="Health2" type="TextureRect" parent="Health"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 105.0
offset_top = -8.0
offset_right = 121.0
offset_bottom = 8.0
grow_vertical = 2
texture = SubResource("AnimatedTexture_u6ala")
stretch_mode = 1

[node name="Health3" type="TextureRect" parent="Health"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 131.0
offset_top = -8.0
offset_right = 147.0
offset_bottom = 8.0
grow_vertical = 2
texture = SubResource("AnimatedTexture_u6ala")
stretch_mode = 1

[node name="Health4" type="TextureRect" parent="Health"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 157.0
offset_top = -8.0
offset_right = 173.0
offset_bottom = 8.0
grow_vertical = 2
texture = SubResource("AnimatedTexture_u6ala")
stretch_mode = 1

[node name="Health5" type="TextureRect" parent="Health"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 183.0
offset_top = -8.0
offset_right = 199.0
offset_bottom = 8.0
grow_vertical = 2
texture = SubResource("AnimatedTexture_u6ala")
stretch_mode = 1

[node name="Life" type="Panel" parent="."]
offset_left = 15.0
offset_top = 70.0
offset_right = 161.0
offset_bottom = 110.0
theme_override_styles/panel = SubResource("StyleBoxFlat_pv0ub")

[node name="LifeLabel" type="Label" parent="Life"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 9.0
offset_top = -12.0
offset_right = 73.0
offset_bottom = 16.0
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_lrjv7")
theme_override_font_sizes/font_size = 32
text = "Lives
"
vertical_alignment = 1

[node name="Life1" type="TextureRect" parent="Life"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 69.0
offset_top = -8.0
offset_right = 85.0
offset_bottom = 8.0
grow_vertical = 2
texture = SubResource("AnimatedTexture_xevly")

[node name="Life2" type="TextureRect" parent="Life"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 95.0
offset_top = -8.0
offset_right = 111.0
offset_bottom = 8.0
grow_vertical = 2
texture = SubResource("AnimatedTexture_xevly")

[node name="Life3" type="TextureRect" parent="Life"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 121.0
offset_top = -8.0
offset_right = 137.0
offset_bottom = 8.0
grow_vertical = 2
texture = SubResource("AnimatedTexture_xevly")
